<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/locationNameTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_name" />

                <TextView
                    android:id="@+id/locationNameTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text=": Agent;" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/locationRequestTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/requested_quantity" />

                <TextView
                    android:id="@+id/locationRequestTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": 12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/locationCoordinateTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coordinate" />

                <TextView
                    android:id="@+id/locationCoordinateTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": 12.02; 22.06" />
            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/editIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:layout_toStartOf="@+id/deleteIcon"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_baseline_edit_24"
            android:onClick="editLocation"/>

        <ImageButton
            android:id="@+id/deleteIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_baseline_delete_outline_24"
            android:onClick="removeLocation"/>

    </RelativeLayout>


    <!-- Horizontal line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>